# frita_bot

./: README.md
frita_bot/: CMakeLists.txt  package.xml
frita_bringup/: CMakeLists.txt  package.xml
frita_bringup/launch/: frita.launch
frita_bringup/launch/include/: real_create.launch.xml
frita_bringup/scripts/: create_udev_rules.sh  delete_udev_rules.sh  roomba.rules
frita_description/: CMakeLists.txt  package.xml
frita_description/launch/: frita_bot.launch  frita_description.rviz
frita_description/meshes/: block.dae
frita_description/robots/: frita_bot.urdf.xacro
frita_description/urdf/: roomba.urdf.xacro
