<?xml version="1.0"?>
<package>
  <name>frita_bot</name>
  <version>0.0.2</version>
  <description>The frita_bot meta package</description>

  <maintainer email="lukeyes@hotmail.com">Luke Keyes</maintainer>

  <license>BSD</license>

  <author email="lukeyes@hotmail.com">Luke Keyes</author>

  <buildtool_depend>catkin</buildtool_depend>

  <run_depend>frita_bringup</run_depend>
  <run_depend>roomblock_description</run_depend>

  <export>
    <metapackage/>
  </export>
</package>