<?xml version="1.0"?>
<package>
  <name>frita_description</name>
  <version>0.0.2</version>
  <description>The frita_description package</description>

  <maintainer email="lukeyes@hotmail.com">Luke Keyes</maintainer>

  <license>BSD</license>

  <author email="lukeyes@hotmail.com">Luke Keyes</author>

  <buildtool_depend>catkin</buildtool_depend>

  <run_depend>create_description</run_depend>
  <run_depend>joint_state_publisher</run_depend>
  <run_depend>robot_state_publisher</run_depend>
  <run_depend>rviz</run_depend>
  <run_depend>rviz</run_depend>
  <run_depend>urdf</run_depend>
  <run_depend>xacro</run_depend>
  <run_depend>create_description</run_depend>

  <test_depend>rostest</test_depend>
  <test_depend>roslaunch</test_depend>

  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>